Stored the users and roles in database and removed hard coded users and roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#JDBC properties
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
 
+#log JDBC sql statements
+#it is for dev/test purpose
+#do not use it in production since it will log usernames
+spring.jpa.show-sql=true
+logging.level.org.springframework..jdbc.core=Trace
